# cldig

./: .gitignore  LICENSE  README.rst  pyproject.toml
src/cldig/: __init__.py  cli.py  git.py  git_utils.py  llm.py
