[project]
name = "cldig"
version = "0.1.0"
description = "Find and recommend fix in your project"
readme = "README.rst"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "git-python>=1.0.3",
    "openai>=1.65.4",
    "rich>=13.9.4",
]

[project.scripts]
cldig = "cldig.cli:cli"

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint.isort]
combine-as-imports = true
